# SQLCPPBridgeFramework

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  Makefile  Package.swift  README.md  SQLCppBridge.podspec  common-project-include.in  conanfile.py  make_framework  project-meta-info.in
Cases/: example1.cpp  example1.h  example10.cpp  example10.h  example11.cpp  example11.h  example12.cpp  example12.h  example13.cpp  example13.h  example14.cpp  example14.h  example15.cpp  example15.h  example16.cpp  example16.h  example17.cpp  example17.h  example18.cpp  example18.h  example19.cpp  example19.h  example2.cpp  example2.h  example20.cpp  example20.h  example21.cpp  example21.h  example22.cpp  example22.h  example23.cpp  example23.h  example24.cpp  example24.h  example25.cpp  example25.h  example26.cpp  example26.h  example27.cpp  example27.h  (+46 more)
SQLBridge/include/: sb_adapter_sqlite.h  sb_bytes_block.h  sb_class_descriptor.h  sb_container_descriptor.h  sb_context.h  sb_context_engine.h  sb_core.h  sb_core_misc.h  sb_data_section.h  sb_data_section_descriptor.h  sb_exceptions.h  sb_foundation.h  sb_inheritance_descriptor.h  sb_kv_storage.h  sb_links.h  sb_local_storage.h  sb_members_descriptor.h  sb_ref_context.h  sb_sqlite_adapter.h  sb_stm_builder.h  sb_tasks_queue.h  sb_traits.h  sb_trivial_members_descriptor.h  sb_value.h  sqlcppbridge.h
SQLBridge/include/sqlcppbridge/: sb_adapter.h  sb_adapter_sqlite.h  sb_bytes_block.h  sb_class_descriptor.h  sb_container_descriptor.h  sb_context.h  sb_context_engine.h  sb_core.h  sb_core_misc.h  sb_data_section.h  sb_data_section_descriptor.h  sb_exceptions.h  sb_foundation.h  sb_kv_storage.h  sb_local_storage.h  sb_members_descriptor.h  sb_optional.h  sb_ref_context.h  sb_tasks_queue.h  sb_traits.h  sb_trivial_members_descriptor.h  sb_value.h  sqlcppbridge.h
SQLBridge/src/: sb_adapter_sqlite.cpp  sb_class_descriptor.cpp  sb_data_section_descriptor.cpp  sb_sqlite_adapter.cpp  sb_tasks_queue.cpp
SQLCPPBridgeFramework.xcodeproj/: project.pbxproj
SQLCPPBridgeFramework.xcodeproj/xcshareddata/xcschemes/: SQLCPPBridgeFramework.xcscheme
SQLCPPBridgeMSVS/: SQLCPPBridgeMSVS.sln  SQLCPPBridgeMSVS.vcxproj  SQLCPPBridgeMSVS.vcxproj.filters  packages.config
SQLCPPBridgeMSVS/SQLiteLib/: SQLiteLib.vcxproj  SQLiteLib.vcxproj.filters
SQLCPPBridgeMSVS/SQLiteLib/sqlite-autoconf-3280000/: rcver.vc
SQLCPPBridgeMSVS/UnitTests/: UnitTests.vcxproj  UnitTests.vcxproj.filters  packages.config
Support/: main.cpp  time_tracker.h
Support/sqlite/: CMakeLists.txt
UnitTests/: Makefile
UnitTests/include/: t_db_fixture.h
UnitTests/src/: main.cpp  t_case1.cpp  t_case10.cpp  t_case11.cpp  t_case12.cpp  t_case13.cpp  t_case14.cpp  t_case15.cpp  t_case16.cpp  t_case17.cpp  t_case18.cpp  t_case19.cpp  t_case2.cpp  t_case20.cpp  t_case21.cpp  t_case22.cpp  t_case23.cpp  t_case24.cpp  t_case25.cpp  t_case26.cpp  t_case27.cpp  t_case28.cpp  t_case29.cpp  t_case3.cpp  t_case30.cpp  t_case31.cpp  t_case32.cpp  t_case33.cpp  t_case34.cpp  t_case35.cpp  t_case36.cpp  t_case37.cpp  t_case38.cpp  t_case39.cpp  t_case4.cpp  t_case41.cpp  t_case43.cpp  t_case5.cpp  t_case6.cpp  t_case7.cpp  (+5 more)
example/conan-consumer/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  main.cpp
profiles/: android-arm64  ios
scripts/: setup_conan.py
